# NortHing

./: .clippy.toml  .gitattributes  .gitignore  AGENTS-CN.md  AGENTS.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  HANDOFF.md  README.md  README.zh-CN.md  architecture-review_2026-07-21.md  cargo-wrap.bat  fix_encoding.cjs  fix_encoding2.cjs  fix_fullwidth.cjs  package-lock.json  package.json  pilot_effort.py  pilot_plan_only.py  pilot_simple.py  pilot_tokens.py  pnpm-lock.yaml  pnpm-workspace.yaml  product_ux_exploration_20260721.md  r60c-ext-skip-audit.txt  r63a-deps-audit.txt  rustfmt.toml  stepfun_dispatch.py  stepfun_planner.py  {}
northing-installer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
northing-installer/src-tauri/src/: lib.rs  main.rs
northing-installer/src-tauri/src/installer/: ai_config.rs  commands.rs  extract.rs  mod.rs  registry.rs  shortcut.rs  types.rs
src/apps/cli/: Cargo.toml  build.rs
src/apps/cli/src/: acp_cli.rs  commands.rs  config.rs  main.rs  management.rs  root_handlers.rs  session.rs
src/apps/cli/src/agent/: agentic_system.rs  core_adapter.rs  mod.rs
src/apps/cli/src/chat_state/: chat_state_core.rs  chat_state_tool_events.rs  display_types.rs  helpers.rs  mod.rs
src/apps/cli/src/modes/: exec.rs
src/apps/cli/src/ui/: agent_selector.rs  chat.rs  command_menu.rs  command_palette.rs  diff_render.rs  markdown.rs  mcp_add_dialog.rs  mcp_selector.rs  mod.rs  model_config_form.rs  model_selector.rs  permission.rs  provider_selector.rs  question.rs  session_selector.rs  skill_selector.rs  string_utils.rs  subagent_selector.rs  syntax_highlight.rs  text_input.rs  theme.rs  theme_selector.rs  tool_cards.rs  widgets.rs
src/apps/desktop/: Cargo.toml  README.md  build.rs
src/apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/apps/desktop-tauri/src-tauri/capabilities/: default.json
src/apps/desktop-tauri/src-tauri/src/: commands.rs  core_rt.rs  event_bridge.rs  main.rs
src/apps/desktop/src/: flags.rs  lib.rs  main.rs  mcp_adapter.rs
src/apps/desktop/src/agent/: agentic_system.rs  mod.rs
src/apps/desktop/src/app_state/: actor.rs  callbacks_lifecycle.rs  callbacks_settings.rs  create_ui.rs  error_banners.rs  event_bridge.rs  inspector.rs  inspector_model_status.rs  log.rs  mod.rs  sessions.rs  settings.rs  skills.rs  slint_glue.rs  state.rs  turn_runtime.rs
src/apps/desktop/src/ui/: main.slint  strings.slint  theme.slint
src/apps/relay-server/: Caddyfile  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  restart.sh  start.sh  stop.sh  test_incremental_upload.py
src/apps/relay-server/src/: config.rs  lib.rs  main.rs
src/apps/relay-server/src/relay/: room.rs
src/apps/relay-server/src/routes/: api.rs
src/apps/relay-server/static/: index.html
src/apps/relay-server/static/assets/: index-RWXIAc4-.js
src/apps/relay-server/static/homepage/: i18n.json  index.html
src/apps/server/: Cargo.toml  README.md
src/apps/server/src/: ai_relay.rs  bootstrap.rs  main.rs  rpc_dispatcher.rs
src/apps/server/src/routes/: api.rs  websocket.rs
src/crates/adapters/ai-adapters/: AGENTS.md  Cargo.toml  README.md
src/crates/adapters/ai-adapters/src/: client.rs  lib.rs  openai_compatible.rs  tool_call_accumulator.rs  trace.rs
src/crates/adapters/ai-adapters/tests/: stream_processor_anthropic.rs  stream_processor_openai.rs  stream_processor_tool_arguments.rs  stream_replay_regressions.rs  stream_test_harness.rs
src/crates/adapters/api-layer/: AGENTS.md  Cargo.toml
src/crates/adapters/api-layer/src/: handlers.rs  lib.rs
src/crates/adapters/transport/: AGENTS.md  Cargo.toml
src/crates/adapters/transport/src/: emitter.rs  event_bus.rs  lib.rs  traits.rs
src/crates/assembly/core/: AGENTS-CN.md  AGENTS.md  Cargo.toml  build.rs
src/crates/assembly/core/locales/: en-US.ftl  zh-CN.ftl  zh-TW.ftl
src/crates/assembly/core/src/: error.rs  lib.rs  product_assembly.rs  product_domain_runtime.rs  product_runtime.rs
src/crates/assembly/core/tests/: context_profile.rs  git_contracts.rs  product_assembly.rs  remote_mcp_streamable_http.rs
src/crates/assembly/product-capabilities/: AGENTS.md  Cargo.toml
src/crates/assembly/product-capabilities/src/: lib.rs
src/crates/assembly/product-capabilities/tests/: product_capabilities.rs
src/crates/cli-internal/: Cargo.toml
src/crates/cli-internal/src/: main.rs
src/crates/contracts/events/: AGENTS.md  Cargo.toml
src/crates/contracts/events/src/: agentic.rs  emitter.rs  lib.rs
src/crates/contracts/kernel-api/: Cargo.toml
src/crates/contracts/kernel-api/src/: agents.rs  bootstrap.rs  error.rs  events.rs  lib.rs  memory.rs  (+7 more)
src/crates/contracts/product-domains/: AGENTS-CN.md  AGENTS.md  Cargo.toml
src/crates/contracts/runtime-ports/: AGENTS.md  Cargo.toml
src/crates/execution/agent-dispatch/: Cargo.toml
src/crates/execution/agent-runtime/: AGENTS.md  Cargo.toml
src/crates/execution/agent-stream/: AGENTS.md  Cargo.toml
src/crates/execution/harness/: AGENTS.md  Cargo.toml
src/crates/execution/runtime-services/: AGENTS.md  Cargo.toml
src/crates/execution/tool-contracts/: AGENTS.md  Cargo.toml
src/crates/execution/tool-provider-groups/: AGENTS.md  Cargo.toml
src/crates/interfaces/acp/: AGENTS-CN.md  AGENTS.md  Cargo.toml
src/crates/services/relay-core/: Cargo.toml
src/crates/services/services-core/: AGENTS.md  Cargo.toml
src/crates/test-support/: Cargo.toml
src/crates/test-support/src/: fixture_loader.rs  lib.rs  offline_profile.rs  test_temp_dir.rs
src/crates/test-support/tests/: offline_subagent_profile.rs
tools/plan-compliance-checker/: Cargo.toml  README.md
tools/plan-compliance-checker/src/: command_runner.rs  git_inspector.rs  lib.rs  main.rs  path_resolver.rs  plan.rs  report.rs  task.rs
tools/plan-compliance-checker/tests/: cli_test.rs  fixture_test.rs  git_inspector_test.rs  path_resolver_test.rs  plan_parser_test.rs  plan_struct_test.rs  task_checker_test.rs
tools/plan-compliance-checker/tests/fixtures/: bad-commit-plan.md  good-plan.md  missing-file-plan.md  path-mismatch-plan.md
(+2238 files in other folders)
