[package]
name = "northhing-installer"
version = "0.2.10"
authors = ["northhing Team"]
edition = "2021"
description = "northhing Custom Installer - Modern branded installation experience"

[lib]
name = "northhing_installer_lib"
crate-type = ["rlib"]

[[bin]]
name = "northhing-installer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = "0.2"
sha2 = "0.10"
northhing-ai-adapters = { path = "../../src/crates/adapters/ai-adapters" }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
mslnk = "0.1"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
strip = false
incremental = true
