[package]
name = "plan-compliance-checker"
version = "0.1.0"
edition = "2024"
description = "Verify workspace state against a plan markdown document"
license = "MIT OR Apache-2.0"

[[bin]]
name = "plan-compliance-checker"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pulldown-cmark = { workspace = true }
anyhow = { workspace = true }
