[package]
name = "northhing-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "northhing Server - Web-based AI Code Assistant"

[[bin]]
name = "northhing-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { workspace = true }
tower-http = { workspace = true }

# Inherited from workspace
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }

