[package]
name = "northhing-desktop-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1.89"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
northhing-core = { path = "../../../crates/assembly/core", default-features = false, features = ["product-full"] }
northhing-events = { path = "../../../crates/contracts/events" }
