[package]
name = "northhing-ai-adapters"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Shared AI protocol adapters for northhing core and installer"

[lib]
name = "northhing_ai_adapters"
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
northhing-agent-stream = { path = "../../execution/agent-stream" }
northhing-core-types = { path = "../../contracts/core-types" }
chrono = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
northhing-events = { path = "../../contracts/events" }
tokio-util = { workspace = true }
