[package]
name = "northhing-events"
version.workspace = true
edition.workspace = true

[dependencies]
northhing-core-types = { path = "../core-types" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

