[package]
name = "northhing-agent-stream"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Lightweight agent stream processing for northhing"

[lib]
name = "northhing_agent_stream"
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
northhing-events = { path = "../../contracts/events" }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
northhing-agent-tools = { path = "../tool-contracts" }
tokio-stream = { workspace = true }
