[package]
name = "northhing-harness"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Harness workflow contracts and registry for northhing"

[lib]
name = "northhing_harness"
crate-type = ["rlib"]

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
