[package]
name = "northhing-agent-tools"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "northhing agent tool contracts"

[lib]
name = "northhing_agent_tools"
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
northhing-core-types = { path = "../../contracts/core-types" }
northhing-runtime-ports = { path = "../../contracts/runtime-ports" }
async-trait = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
