[package]
name = "northhing-relay-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "northhing Relay Core - shared relay logic for embedded and standalone relay"

[lib]
name = "northhing_relay_core"
crate-type = ["rlib"]

[dependencies]
# Web framework
axum = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
