[package]
name = "northhing-services-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "northhing core service owner crate"

[lib]
name = "northhing_services_core"
crate-type = ["rlib"]

[dependencies]
northhing-core-types = { path = "../../contracts/core-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ignore = { workspace = true }
sha2 = { workspace = true }
which = { workspace = true }
similar = { workspace = true }
regex = { workspace = true }

[target.'cfg(windows)'.dependencies]
win32job = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
northhing-test-support = { path = "../../test-support" }
